syntax = "proto3";

package hello;

option go_package = "grpc-example/hello";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayGoodbye (HelloRequest) returns (HelloReply) {}
  rpc GetServerStatus (StatusRequest) returns (StatusReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message StatusRequest {
  string service_name = 1;
}

message StatusReply {
  string status = 1;
  int64 uptime_seconds = 2;
  string version = 3;
}
